Fixed priority points statement not showing up

--- a/frontend/src/campaign/campaign.scss
+++ b/frontend/src/campaign/campaign.scss
@@ -13,6 +13,7 @@ $edx-button-color: #e7e7e7;
         font-size: 20px;
         text-align: center;
         font-weight: 600;
+        white-space: pre-wrap; //Makes '\n' display correctly on page
     }
     &_count {
         margin-bottom: 0;
